--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <title>Kara Publish Assistant</title>
-</head>
-<body>
+    <style type="text/css">
+        /*global*/
+        a, address, b, blockquote, body, div, em, fieldset, form, h1, h2, h3, h4, h5, h6, html, i, iframe, img, label, legend, li, ol, p, s, span, table, tbody, td, tfoot, th, thead, tr, ul { margin: 0; padding: 0; border: 0; font-weight: inherit; font-style: inherit; font-size: 100%; font-family: -apple-system }
+        button, input, textarea { padding: 0; font-family: inherit }
+        ol, ul { list-style: none }
+        a img { border: none; vertical-align: top }
+        a { text-decoration: none }
+        button { overflow: visible; margin: 0; border: 0; background-color: transparent }
+        button::-moz-focus-inner { padding: 0 }
+        input, textarea { background: 0 0; -webkit-border-radius: 0; -moz-border-radius: 0; border-radius: 0; /*-webkit-appearance: none*/ }
+        input[type=password] { -webkit-text-security: disc }
+        button:focus, input:focus, textarea:focus { outline: 0 }
+        body { word-wrap: break-word }
+        * { -webkit-tap-highlight-color: rgba(0, 0, 0, 0) }
+        .inline { display: inline-block; }
+        .left { float: left; }
+        .right { float: right; }
+        .clear { clear: both; }
+        .padding-left-default { padding-left: 8px; }
+        .padding-right-default { padding-right: 8px; }
+        .margin-left-default { margin-left: 8px; }
+        .margin-right-default { margin-right: 8px; }
+        .margin-top-default { margin-top: 8px; }
+        .margin-right-more { margin-right: 16px; }
+        .margin-top-more { margin-top: 16px; }
+        .button { border: 1px solid gray; border-radius: 5px; padding: 5px 10px 5px 10px; background: green; color: #e9e9e9; font-size: 14px; cursor: pointer; }
+        .button:disabled { cursor: default; background: gray; color: lightgray; }
+        /*basic*/
+        body { padding: 8px; font-size: 16px; font-family: "微软雅黑" }
+        .page { margin: 0 auto; width: 800px; }
+        /****** <div className="empty"><p><span>请选择构建任务</span></p></div> */
+        .empty { margin: 0 auto; width: 200px; height: 200px; background: url("../img/info.png") no-repeat center; text-align: center; }
+        .empty p { position: relative; display: block; width: 100%; height: 100%; }
+        .empty p span { position: absolute; bottom: 0; display: block; text-align: center; width: 100%; padding-bottom: 8px; font-size: 16px; }
+        /*tab*/
+        #step_tab { }
+        /*rdm*/
+        #rdm_down { }
+        .v-split { width: 0px; border-right: solid 1px lightgray; margin: 8px; }
+        .rdm-job { height: 24px; line-break: auto; text-overflow: ellipsis; width: 100%; white-space: nowrap; }
+        .rdm-job:hover { background: #e9e9e9; cursor: default; }
+        .rdm-artifact { display: block; cursor: default; word-break: break-all; white-space: nowrap; text-overflow: clip; }
+        .rdm-artifact:hover { background: #e9e9e9; }
+        #jobs_cot { width: 160px; }
+        #artifacts_cot { border-left: solid 1px lightgray; min-height: 200px; max-height: 300px; overflow-y: auto; overflow-x: hidden; width: 620px; }
+        #down_operator { }
+        /*cdn*/
+        #cdn_up { }
 
-<span class="current">RDM任务启动</span><b>&gt;</b>
-<span>RDM任务下载</span><b>&gt;</b>
-<span>RDM任务上传</span><b>&gt;</b>
-<span>RDM任务验证</span>
+    </style>
+</head>
+<body class="page">
+<!--TAB-->
+<div id="step_tab">
+    <span class="current">RDM任务下载</span><b>&gt;</b>
+    <span>CDN任务上传</span><b>&gt;</b>
+</div>
+
+<!--RDM DOWN-->
+<div id="rdm_down" class="margin-top-default">
+    <div id="jobs_cot" class="left">
+        <div class="rdm-job">K歌Release4.5.X</div>
+        <div class="rdm-job">K歌Release4.6.X</div>
+        <div class="rdm-job">K歌Release4.7.X</div>
+    </div>
+    <div id="artifacts_cot" class="left padding-left-default margin-left-default">
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+        <label class="rdm-artifact"> <input type="checkbox"> KARA_SDFFDF_ERW_2340234.24105435.APK - 2345352 </label>
+
+    </div>
+    <div id="down_operator" class="clear right margin-top-more">
+        <span id="down_operator_tip" class="margin-right-more">选中29个文件</span>
+        <button href="javascript:;" class="button margin-right-default" id="sel_apks">APK(s)</button>
+        <button href="javascript:;" class="button margin-right-default" id="sel_none">NONE</button>
+        <button href="javascript:;" class="button margin-right-default" id="sel_to_next">NEXT</button>
+    </div>
+</div>
+
+<!--CDN UP-->
+<div id="cdn_up" class="margin-top-default">
+    <p id="upload_cot"></p>
+</div>
 <script>
-    require("../dist/app/index.js");
+
+    const $ = function (id) {
+        return document.getElementById(id);
+    };
+
+    const $$ = function (className) {
+        return document.getElementsByClassName(className);
+    }
+
+    const __app_root = require("app-root-path");
+    require(__app_root + "/dist/app/index.js");
 </script>
 </body>
 </html>
